<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyLocation</string>
    <string name="icon">Icon</string>
    <string name="menu_settings">Settings</string>
    <string name="notready">Not Ready</string>
    <string name="label_postal_code">Postal Code</string>
    <string name="label_sub_admin_area">Sub Admin Area</string>
    <string name="label_admin_area">Admin Area</string>
    <string name="label_country">Country</string>
    <string name="mapsApiKey">AIzaSyD9xZDpD4HmUbSV1pbpd_RPJhryvf2ALPY</string>

</resources>